--- a/kontakt.html
+++ b/kontakt.html
@@ -82,7 +82,7 @@
 
 <!--KONTAKT-->
 <h2 class="form-headline">Máte zájem o Nákup či prodej motorek, FMX Show, Chcete zorganizovat adrenalinový zážitek pro člena rodiny nebo si chcete jen tak zkusit zajezdit? S čímkoliv Vám rádi pomůžeme, tak nás neváhejte kontaktovat.</h2>
-<div class="card">
+<div class="formcard">
     <div class="header">
       <h2>Napište nám!</h2>
       <p>Po odeslání formuláře se Vám brzy ozveme</p>
