--- a/sluzby.html
+++ b/sluzby.html
@@ -180,7 +180,7 @@
     </div>
   <div class="blockfive" >
     <div class="blockfive-item">
-        <h4 id="five-descp">Bazar bude brzy vyplněn motorkami nebo nás <a href="kontakt.html" id="bazar-contact">oslovte</a> a domluvíme se.</h4>
+        <h4 id="five-descp">V naśem bazaru naleznete spoustu motorek, z kterých si můžete vybrat.<br>Neváhejte nás <a href="kontakt.html" id="bazar-contact">oslovit</a> a určitě spolu vybereme tu pravou pro Vás.</h4>
     </div>
 
     <div class="blockfive-item">
