--- a/motorky.html
+++ b/motorky.html
@@ -16,8 +16,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">    
 <link rel="stylesheet" href="style.css">
+
     <link rel="stylesheet" href="style-four.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="css/slick.css">
 
 </head>
 
@@ -54,13 +56,128 @@
 
   <h1 class="main-headline">MOTORKY</h1>
   <p class="main-descp">Nabízíme k pronájmu a prodeji širokou škálu elektro-motorek značky Kuberg, jsme součástí různých událostí,<br> předáváme zkušenosti s jízdou na motorce a mnohé další.</p>
+<br><br>
 
-  <!--MAIN START-->
-  <div class="slide-nav">
-      <div class="image-nav">
-          
-      </div>
-  </div>
+
+  <!--TAB-NAV START-->
+<div class="tab-nav-container">
+    <div class="tab " >
+        <div class="slick-itm"><button class="tablinks" onclick="openTab(event, 'kuberg-challenger')"><img src="img/motorky/menu/Kuberg-Challenger.jpg" alt=""></button></div>
+        <div class="slick-itm"><button class="tablinks" onclick="openTab(event, 'Kuberg-Cross-Hero-Edition')"><img src="img/motorky/menu/Kuberg-Cross-Hero-Edition.jpg" alt=""></button></div>
+        <div class="slick-itm"><button class="tablinks" onclick="openTab(event, 'Kuberg-Cross')"><img src="img/motorky/menu/Kuberg-Cross.jpg" alt=""></button></div>
+        <div class="slick-itm"><button class="tablinks" onclick="openTab(event, 'Kuberg-Freerider-Street')"><img src="img/motorky/menu/Kuberg-Freerider-Street.jpg" alt=""></button></div>
+        <div class="slick-itm"><button class="tablinks" onclick="openTab(event, 'Kuberg-SPECIAL')"><img src="img/motorky/menu/Kuberg-Cross.jpg" alt=""></button></div>
+        <div class="slick-itm"><button class="tablinks" onclick="openTab(event, 'Kuberg-Freerider')"><img src="img/motorky/menu/Kuberg-Freerider.jpg" alt=""></button></div>
+        <div class="slick-itm"><button class="tablinks" onclick="openTab(event, 'Kuberg-Start')"><img src="img/motorky/menu/Kuberg-Start.jpg" alt=""></button></div>
+        <div class="slick-itm"><button class="tablinks" onclick="openTab(event, 'Kuberg-Trial-Hero-Edition')"><img src="img/motorky/menu/Kuberg-Trial-Hero-Edition.jpg" alt=""></button></div>
+        <div class="slick-itm"><button class="tablinks" onclick="openTab(event, 'Kuberg-Trial')"><img src="img/motorky/menu/Kuberg-Trial.jpg" alt=""></button></div>
+        <div class="slick-itm"><button class="tablinks" onclick="openTab(event, 'Kuberg-Freerider')"><img src="img/motorky/menu/Kuberg-Freerider.jpg" alt=""></button></div>
+    </div>
+</div>
+
+<div id="kuberg-challenger" class="tabcontent">
+    <div class="tabitem">
+        <img src="img/motorky/menu/Kuberg-Challenger.jpg" alt="" width="100%">
+    </div>
+
+    <div class="tabitem">
+        <div class="tabitem-text">
+            <table>
+                <h1>Kuberg Challenger</h1>
+                <tr>
+                    <td class="tab-label">Kontrolér:</td>
+                    <td>PWM 1kW</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Motor:</td>
+                    <td>2 x 12V (9Ah)</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Maximální rychlost:</td>
+                    <td>24km/h</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Hmotnost:</td>
+                    <td>37kg</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Nosnost:</td>
+                    <td>100kg</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Rozvor:</td>
+                    <td>13cm</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Šířka říditek:</td>
+                    <td>80cm</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Výška říditek:</td>
+                    <td>104cm</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Výška sedadla:</td>
+                    <td>86cm</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Zadní tlumič:</td>
+                    <td>DNM Burner RB-RCP</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Vidlice:</td>
+                    <td>Manitou Dorado 203mm, RST 180mm</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Pneumatiky:</td>
+                    <td>20“ x 2,5“ Maxxis Creepy Crawler</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Věkova kategorie:</td>
+                    <td>12+</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Nabíjení:</td>
+                    <td>120min</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Operační doba:</td>
+                    <td>45 – 180 min*</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Baterie:</td>
+                    <td>Li-Ion 22,2Ah nebo 30Ah</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Extra:</td>
+                    <td>Kola: 20“, 24“. K rozšíření a k zakoupení navíc: <br>rozeta (60km/h a více), přední blatník, Streamport (Wi-Fi Dongle), stojan.</td>
+                </tr>
+            </table>
+        <p>*Dle váhy jezdce, stylu jízdy, terénu – svižná 30 min až 90 min,<br> pomalá/velmi pomalá jízda 90-180 min</p>
+        </div>
+    </div>
+</div>
+
+
+
+
+  <!--TAB-NAV END-->
 
 
 
@@ -68,6 +185,7 @@
 
   <script src="https://kit.fontawesome.com/8c5ffe8f98.js" crossorigin="anonymous"></script>
   <script src="js.js"></script>
+  <script src="js/slick.min.js"></script>
   
   </body>
   </html>
