--- a/motorky.html
+++ b/motorky.html
@@ -872,14 +872,70 @@
     </div>
 </div>
 
-
-
-
-
-
   <!--TAB-NAV END-->
 
+<div class="main-head">
+    <h1>Naídka motorek</h1>
+    <p>Ve spolupráci se známou značkou motorek <a href="https://www.kuberg.com/en" target="_blank">Kuberg</a>, Vám přinášíme ty nejlepší motorky na vyzkoušení pro <strong> malý i velký</strong> milovníky motocrossu.
+       <p> Vyberte si motorku pro sebe nebo svoji ratolest a přijdte si s námi zajezdit či už na jednu z našich <a href="novinky.html" target="_blank">událostí</a>,<br> nebo si motorku vypujčte a užijte si svůj skvělý adrenalinový den.</p>
+    </p>
+    <a href="https://www.kuberg.com/en" target="_blank"><img src="img/kuberg.png" alt=""></a>
+</div>
 
+<div class="price-list">
+    <div class="price-item">
+        <h2>Všechny motorky jsou k dispozici k zapujčení na den, na dva dny nebo na týden.<br>
+        Nabízíme taky možnost dlouhodobého pronájmu na měsíc či na rok.<br>Pro více informací s můžete podívat na náš ceník a následně nás <a href="kontakt.html" target="_blank">kontaktovat</a>.</h2>
+        <a href="" id="price-btn">Ceník ke stažení</a>
+        
+    </div>
+</div>
+
+
+
+
+
+
+
+<!--FOOTER START-->
+<footer class="footer">
+    <div class="footer-logo">
+        <a href="index.html"><img src="img/logo.svg"></a>
+    </div>
+    <div class="footer-left">
+        <div class="footer-links">
+            <a href="index.html">Domov</a>
+            <a href="sluzby.html">Služby</a>
+            <a href="motorky.html">Motorky</a>
+            <a href="novinky.html">Novinky</a>
+            <a href="bazar.html">Bazar</a>
+            <a href="kontakt.html">Kontakt</a>
+        </div>
+    </div>
+    <div class="footer-center">
+        <div>
+            <i class="fa fa-map-marker"></i>
+            <p>Zálužné 65, 749 01 Vítkov,<br>Česká republika</p>
+        </div>
+        <div>
+            <i class="fa fa-phone"></i>
+            <p><a href="tel:+420722757800">+420 722 757 800</a></p>  
+        </div>
+        <div>
+            <i class="fa fa-envelope"></i>
+            <p><a href="mailto:freemotostyle@gmail.com">freemotostyle@gmail.com</a></p>
+        </div>
+    </div>    
+    <div class="footer-right">
+        <p class="gdpr">
+            <span class="gdpr">GDPR a Obchodní podmínky</span></p>
+            <button class="download"><a href="gdpr.html" id="gdpra"> Stáhnout dokumenty</a></button>
+            <p class="footer-company">Spisová značka: C 70050<br>vedená u Krajského soudu v Ostravě <br>IČO:05953723<br>Zálužné 65, 749 01 Vítkov</p>
+    </div>
+    <hr>
+    <p class="copy">FREE moto STYLE academy s.r.o. © 2017 - 2021 Všechna práva vyhrazena. Created by <a href="www.divavirtualagency.com" target="_blank" class="reference">DIVA | digital virtual agency</a></p>
+</footer>
+<!--FOOTER END-->
 
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-alt-circle-up"></i></button>
 
