--- a/motorky.html
+++ b/motorky.html
@@ -875,7 +875,7 @@
   <!--TAB-NAV END-->
 
 <div class="main-head">
-    <h1>Naídka motorek</h1>
+    <h1>Nabídka motorek</h1>
     <p>Ve spolupráci se známou značkou motorek <a href="https://www.kuberg.com/en" target="_blank">Kuberg</a>, Vám přinášíme ty nejlepší motorky na vyzkoušení pro <strong> malý i velký</strong> milovníky motocrossu.
        <p> Vyberte si motorku pro sebe nebo svoji ratolest a přijdte si s námi zajezdit či už na jednu z našich <a href="novinky.html" target="_blank">událostí</a>,<br> nebo si motorku vypujčte a užijte si svůj skvělý adrenalinový den.</p>
     </p>
