--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="main-headline">
         <div class="head">
             <h1 class="headline">Užijte si s námi motorkářské<br>adrenalinové zážitky.</h1><br>
-            <a class="headline-btn" href="#">Více o nás</a>
+            <a class="headline-btn" href="#aboutus">Více o nás</a>
         </div>
     </div>
 
@@ -123,9 +123,10 @@
         V budoucnu se chceme ohlédnout a vidět úspěšné jezdce v jakémkoliv motoristickém sportu nebo prostě jen spokojené zájemce, kteří se poprvé svezli právě u nás a splnili jsme jim jejich sen.</h2>
 </section>
 
-   <h2 class="block-three-headline">A kdo vlastně jsme?</h2>
+   <h2 class="block-three-headline" id="aboutus">A kdo vlastně jsme?</h2>
 
 </div>
+
 
 <div class="block-three">
     <div class="person-container">
@@ -227,6 +228,10 @@
         <div>
             <i class="fa fa-phone"></i>
             <p><a href="tel:+420722757800">+420 722 757 800</a></p>  
+        </div>
+        <div>
+            <i class="fa fa-phone"></i>
+            <p><a href="tel:+420722757880">+420 722 757 880</a></p>  
         </div>
         <div>
             <i class="fa fa-envelope"></i>
