--- a/kontakt.html
+++ b/kontakt.html
@@ -64,6 +64,7 @@
     <p><strong>IČO</strong>: 05953723</p>
     <p><strong>Spisová značka</strong>: C 70050 vedená u Krajského soudu v Ostravě</p>
     <p><strong>E-mail</strong>: <a href="mailto:freemotostyle@gmail.com">freemotostyle@gmail.com</a></p>
+    <p><strong>Telefon</strong>: <a href="tel:+420722757800">+420 722 757 800</a></p>
     <p><strong>Telefon</strong>: <a href="tel:+420722757880">+420 722 757 880</a></p><br>
     
     <div class="info-social">
@@ -200,6 +201,10 @@
             <i class="fa fa-phone"></i>
             <p><a href="tel:+420722757800">+420 722 757 800</a></p>  
         </div>
+        <div>
+          <i class="fa fa-phone"></i>
+          <p><a href="tel:+420722757880">+420 722 757 880</a></p>  
+      </div>
         <div>
             <i class="fa fa-envelope"></i>
             <p><a href="mailto:freemotostyle@gmail.com">freemotostyle@gmail.com</a></p>
