--- a/motorky.html
+++ b/motorky.html
@@ -76,7 +76,6 @@
             <span class="tooltiptext">Kuberg Start</span>
         </div>
 
-
         <div class="slick-itm" id="three">
             <a class="tablinks" onclick="openTab(event, 'Kuberg-Trial-Hero-Edition')">
                 <img src="img/motorky/menu/Kuberg-Trial-Hero-Edition.png" alt="">
@@ -92,10 +91,10 @@
         </div>
 
         <div class="slick-itm" id="nine">
-            <a class="tablinks" onclick="openTab(event, 'SPECIAL')">
-                <img src="img/motorky/menu/Kuberg-Freerider.png" alt="">
+            <a class="tablinks" onclick="openTab(event, 'alta-motors-redshift')">
+                <img src="img/motorky/menu/alta-motors-redshift.jpg" alt="">
             </a>
-            <span class="tooltiptext">SPECIAL</span>
+            <span class="tooltiptext">ALTA Motors Redshift</span>
         </div>
 
         <div class="slick-itm" id="five">
@@ -130,9 +129,30 @@
     </div>
 </div>
 
+
 <div id="Kuberg-Freerider" class="tabcontent">
     <div class="tabitem">
         <img src="img/motorky/menu/Kuberg-Freerider.jpg" alt="" width="100%">
+        <div class="price-small">
+            <div class="price-small-item">
+                <h2>Ceny pronájmu</h2>
+                <table>
+                <tr>
+                    <td>1 den</td>
+                    <td>1 600Kč</td>
+                </tr>
+                <tr>
+                    <td>2 dny</td>
+                    <td>3 200Kč</td>
+                </tr>
+                <tr>
+                    <td>týden</td>
+                    <td>7 500Kč</td>
+                </tr>
+            </table>
+                <h3>Ceny dlouhodobého pronájmu a další informace naleznete v ceníku ke stažení níže.</h3>
+            </div>
+        </div>
     </div>
 
     <div class="tabitem">
@@ -227,11 +247,32 @@
         <p>*Dle váhy jezdce, stylu jízdy, terénu – svižná 30 min až 90 min,<br> pomalá/velmi pomalá jízda 90-180 min</p>
         </div>
     </div>
+  
 </div>
 
 <div id="Kuberg-Start" class="tabcontent">
     <div class="tabitem">
         <img src="img/motorky/menu/Kuberg-Start.jpg" alt="" width="100%">
+        <div class="price-small">
+            <div class="price-small-item">
+                <h2>Ceny pronájmu</h2>
+                <table>
+                <tr>
+                    <td>1 den</td>
+                    <td>600Kč</td>
+                </tr>
+                <tr>
+                    <td>2 dny</td>
+                    <td>1 200Kč</td>
+                </tr>
+                <tr>
+                    <td>týden</td>
+                    <td>2 600Kč</td>
+                </tr>
+            </table>
+                <h3>Ceny dlouhodobého pronájmu a další informace naleznete v ceníku ke stažení níže.</h3>
+            </div>
+        </div>
     </div>
 
     <div class="tabitem">
@@ -321,6 +362,26 @@
 <div id="Kuberg-Trial-Hero-Edition" class="tabcontent">
     <div class="tabitem">
         <img src="img/motorky/menu/Kuberg-Trial-Hero-Edition.jpg" alt="" width="100%">
+        <div class="price-small">
+            <div class="price-small-item">
+                <h2>Ceny pronájmu</h2>
+                <table>
+                <tr>
+                    <td>1 den</td>
+                    <td>700Kč</td>
+                </tr>
+                <tr>
+                    <td>2 dny</td>
+                    <td>1 400Kč</td>
+                </tr>
+                <tr>
+                    <td>týden</td>
+                    <td>3 600Kč</td>
+                </tr>
+            </table>
+                <h3>Ceny dlouhodobého pronájmu a další informace naleznete v ceníku ke stažení níže.</h3>
+            </div>
+        </div>
     </div>
 
     <div class="tabitem">
@@ -420,6 +481,26 @@
 <div id="Kuberg-Trial" class="tabcontent">
     <div class="tabitem">
         <img src="img/motorky/menu/Kuberg-Trial.jpg" alt="" width="100%">
+        <div class="price-small">
+            <div class="price-small-item">
+                <h2>Ceny pronájmu</h2>
+                <table>
+                <tr>
+                    <td>1 den</td>
+                    <td>700Kč</td>
+                </tr>
+                <tr>
+                    <td>2 dny</td>
+                    <td>1 400Kč</td>
+                </tr>
+                <tr>
+                    <td>týden</td>
+                    <td>3 600Kč</td>
+                </tr>
+            </table>
+                <h3>Ceny dlouhodobého pronájmu a další informace naleznete v ceníku ke stažení níže.</h3>
+            </div>
+        </div>
     </div>
 
     <div class="tabitem">
@@ -516,9 +597,98 @@
     </div>
 </div>
 
+<div id="alta-motors-redshift" class="tabcontent">
+    <div class="tabitem">
+        <img src="img/motorky/menu/alta-motors-redshift.jpg" alt="" width="100%">
+        <div class="price-small">
+            <h2>Ceny pronájmu</h2>
+                <p>Možnosti pronájmu a ceny jsou dle domluvy. Záleží na místě, jestli je pronájem krátkodobý či dlouhodobý, pod dohledem nebo bez.</p>
+            <div class="price-small-item">
+                    <p class="price-sub">POD DOZOREM</p>
+                    <p class="price-descp">Půjčení na 5/15 minut (+ kauce, prohlášení, občanský průkaz)</p>
+                    <p class="price-descp">Vybití 1 plné baterie pod dozorem za 5000Kč (+kauce, prohlášení, občanský průkaz, dobrovolné pojištění)</p>
+            </div>
+            
+            <div class="price-small-item">
+                    <p class="price-sub">BEZ DOZORU</p>
+                    <p class="price-descp">Nutná kauce, občanský průkaz, prohlášení, dobrovolné pojištění</p>
+
+                <h3>Ceny dlouhodobého pronájmu a další informace naleznete v ceníku ke stažení níže.</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="tabitem">
+        <div class="tabitem-text">
+            <table>
+                <h1>ALTA Motors Redshift</h1>
+                <h5>Krosová elektrická motorka</h5>
+                <p>Motorka má ukazatel stavu baterie a tachometr. V ČR jsou jen dva kusy, v Evropě je celkově jen pár kusů.<br> Americká značka z Kalifornie, která přišla na svět v roce 2010, ale už se přestala vyrábět. Jestli je někdo skeptický vůči elektrickým motorům.. pak Alta změní
+                    názor</p><br><br>
+                <tr>
+                    <td class="tab-label">Výkon:</td>
+                    <td>40 kw</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Točivý moment:</td>
+                    <td>51,5Nm</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Maximální rychlost:</td>
+                    <td>125km/h</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Hmotnost:</td>
+                    <td>118kg</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Nabíjení:</td>
+                    <td>2,5-3hod</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Operační doba:</td>
+                    <td>2-4hod*</td>
+                </tr>
+
+                <tr>
+                    <td class="tab-label">Baterie:</td>
+                    <td>5,8kWh</td>
+                </tr>
+
+            </table>
+        <p>*Doba jízdy záleží na terénu, stylu jízdy.<br>Projížďka až 3,5-4h, svižnější projížďka do 2 hodin.</p>
+        </div>
+    </div>
+</div>
+
 <div id="Kuberg-Cross-Hero-Edition" class="tabcontent">
     <div class="tabitem">
         <img src="img/motorky/menu/Kuberg-Cross-Hero-Edition.jpg" alt="" width="100%">
+        <div class="price-small">
+            <div class="price-small-item">
+                <h2>Ceny pronájmu</h2>
+                <table>
+                <tr>
+                    <td>1 den</td>
+                    <td>800Kč</td>
+                </tr>
+                <tr>
+                    <td>2 dny</td>
+                    <td>1 600Kč</td>
+                </tr>
+                <tr>
+                    <td>týden</td>
+                    <td>4 100Kč</td>
+                </tr>
+            </table>
+                <h3>Ceny dlouhodobého pronájmu a další informace naleznete v ceníku ke stažení níže.</h3>
+            </div>
+        </div>
     </div>
 
     <div class="tabitem">
@@ -618,6 +788,26 @@
 <div id="Kuberg-Cross" class="tabcontent">
     <div class="tabitem">
         <img src="img/motorky/menu/Kuberg-Cross.jpg" alt="" width="100%">
+        <div class="price-small">
+            <div class="price-small-item">
+                <h2>Ceny pronájmu</h2>
+                <table>
+                <tr>
+                    <td>1 den</td>
+                    <td>800Kč</td>
+                </tr>
+                <tr>
+                    <td>2 dny</td>
+                    <td>1 600Kč</td>
+                </tr>
+                <tr>
+                    <td>týden</td>
+                    <td>4 100Kč</td>
+                </tr>
+            </table>
+                <h3>Ceny dlouhodobého pronájmu a další informace naleznete v ceníku ke stažení níže.</h3>
+            </div>
+        </div>
     </div>
 
     <div class="tabitem">
@@ -886,7 +1076,7 @@
     <div class="price-item">
         <h2>Všechny motorky jsou k dispozici k zapujčení na den, na dva dny nebo na týden.<br>
         Nabízíme taky možnost dlouhodobého pronájmu na měsíc či na rok.<br>Pro více informací s můžete podívat na náš ceník a následně nás <a href="kontakt.html" target="_blank">kontaktovat</a>.</h2>
-        <a href="" id="price-btn">Ceník ke stažení</a>
+        <a href="docs/Ceník pronájmu elektrických a spalovacích motocyklů.pdf" id="price-btn" download>Ceník ke stažení</a>
         
     </div>
 </div>
@@ -920,6 +1110,10 @@
         <div>
             <i class="fa fa-phone"></i>
             <p><a href="tel:+420722757800">+420 722 757 800</a></p>  
+        </div>
+        <div>
+            <i class="fa fa-phone"></i>
+            <p><a href="tel:+420722757880">+420 722 757 880</a></p>  
         </div>
         <div>
             <i class="fa fa-envelope"></i>
