--- a/sluzby.html
+++ b/sluzby.html
@@ -272,6 +272,10 @@
             <p><a href="tel:+420722757800">+420 722 757 800</a></p>  
         </div>
         <div>
+            <i class="fa fa-phone"></i>
+            <p><a href="tel:+420722757880">+420 722 757 880</a></p>  
+        </div>
+        <div>
             <i class="fa fa-envelope"></i>
             <p><a href="mailto:freemotostyle@gmail.com">freemotostyle@gmail.com</a></p>
         </div>
