small device bg

--- a/novinky.html
+++ b/novinky.html
@@ -17,7 +17,7 @@
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">    
 <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-three.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="responsive-home.css">
 
 </head>
 
@@ -83,8 +83,9 @@
         <div class="card">
             <div class="imgBx ">
                 <img src="img/pic1.jpg">
-                <h3 class="moto-name">Name of event</h3>
-                <p>Datum konání: 1.červenec 2021</p>
+                <h3 class="moto-name">Den čisté dopravy, Hradec nad Moravicí</h3>
+                <p>vedle železniční stanice</p>
+                <p>Datum konání: 18.9.2021 </p>
             </div>
 
             <div class="details">
@@ -102,8 +103,9 @@
         <div class="card">
             <div class="imgBx ">
                 <img src="img/pic2.jpg">
-                <h3 class="moto-name">Name of event</h3>
-                <p>Datum konání: 1.červenec 2021</p>
+                <h3 class="moto-name">E-auto Salon v Olomouci</h3>
+                <p>Výstaviště Flóra, Pavilon A a B + venkovní plochy</p>
+                <p>Datum konání: 30.7.-1.8.2021 </p>
             </div>
 
             <div class="details">
@@ -122,7 +124,8 @@
             <div class="imgBx ">
                 <img src="img/pic3.jpg">
                 <h3 class="moto-name">Name of event</h3>
-                <p>Datum konání: 1.červenec 2021</p>
+                <p>hudební festival na jižní moravě</p>
+                <p>Datum konání: 11.9.2021 </p>
             </div>
 
             <div class="details">
@@ -140,8 +143,8 @@
         <div class="card">
             <div class="imgBx ">
                 <img src="img/pic4.jpg">
-                <h3 class="moto-name">Name of event</h3>
-                <p>Datum konání: 1.červenec 2021</p>
+                <h3 class="moto-name">Enduro CAMS, Zlaté Hory </h3>
+                <p>Datum konání: červenec 2021 </p>
             </div>
 
             <div class="details">
