--- a/novinky.html
+++ b/novinky.html
@@ -17,7 +17,7 @@
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">    
 <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-three.css">
-    <link rel="stylesheet" href="responsive-home.css">
+    <link rel="stylesheet" href="responsive.css">
 
 </head>
 
