--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
         </div>
     </div>
 
-    <div class="person-container">
-        <div class="person-item">
+    <div class="person-container" id="banik">
+        <div class="person-item" >
             <div class="personal-info">
             <h3 class="name">Baník</h3>
             <p class="label">Záliby</p>
@@ -201,7 +201,7 @@
 <div class="partners">
     <div class="partners-item"><h3 class="partners-headline">Naši partneři</h3></div>
     <div class="partners-item"><a href="https://www.kuberg.com/en" target="_blank"><img src="img/kuberg.png" alt="" class="partner-logo"></a></div>
-    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/uax-logo.png" alt="" width="30%" class="partner-logo"></a></div>
+    <div class="partners-item"><a href="https://www.uax.cz/cs/uax/" target="_blank"><img src="img/uax-logo.png" alt="" width="30%" class="partner-logo" id="uax" ></a></div>
 </div>
 <!--PARTNERS-->
 
@@ -239,8 +239,7 @@
         </div>
     </div>    
     <div class="footer-right">
-        <p class="gdpr">
-            <span class="gdpr">GDPR a Obchodní podmínky</span></p>
+        <p class="gdpr">GDPR a Obchodní podmínky</p>
             <button class="download"><a href="gdpr.html" id="gdpra"> Stáhnout dokumenty</a></button>
             <p class="footer-company">Spisová značka: C 70050<br>vedená u Krajského soudu v Ostravě <br>IČO:05953723<br>Zálužné 65, 749 01 Vítkov</p>
     </div>
