--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <p class="footer-company">Spisová značka: C 70050<br>vedená u Krajského soudu v Ostravě <br>IČO:05953723<br>Zálužné 65, 749 01 Vítkov</p>
     </div>
     <hr>
-    <p class="copy">FREE moto STYLE academy s.r.o. © 2017 - 2021 Všechna práva vyhrazena. Created by <a href="www.divavirtualagency.com" target="_blank" class="reference">DIVA | digital virtual agency</a></p>
+    <p class="copy">FREE moto STYLE academy s.r.o. © 2017 - 2021 Všechna práva vyhrazena. Created by <a href="https://divavirtualagency.com" target="_blank" class="reference">DIVA | digital virtual agency</a></p>
 </footer>
 <!--FOOTER END-->
 
