--- a/motorky.html
+++ b/motorky.html
@@ -17,8 +17,8 @@
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">    
 <link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" href="style-four.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="css/style-four.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/slick.css">
 
 </head>
