--- a/sluzby.html
+++ b/sluzby.html
@@ -16,8 +16,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">    
 <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-two.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="css/style-two.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
 </head>
 
@@ -55,7 +55,7 @@
 
   <!--MAIN START-->
   <h1 class="main-headline">Naše služby</h1>
-  <p class="main-descp">Nabízíme k pronájmu a prodeji širokou škálu elektro-motorek značky Kuberg, jsme součástí různých událostí,<br> předáváme zkušenosti s jízdou na motorce a mnohé další.</p>
+  <p class="main-descp">Nabízíme k pronájmu a prodeji širokou škálu elektro-motorek značky Kuberg, jsme součástí různých událostí, předáváme zkušenosti s jízdou na motorce a mnohé další.</p>
 
   <div class="service-select">
       <a href="#blockone">Prodej</a>
@@ -94,7 +94,7 @@
     </div>
 
     <div class="blocktwo">
-        <div class="blocktwo-item">
+        <div class="blocktwo-item" >
             <p>Pronájem je u FREE moto STYLE academy možný:<br><br>
             <strong>krátkodobý</strong> – od jednoho vybití baterie, den, dva dny (i víkend), týden.<br>
             <strong>dlouhodobý</strong> – měsíc až rok.</p><br>
@@ -104,7 +104,7 @@
             <a href="kontakt.html" class="rent-btn">Chci pronajmout</a>
         </div>
 
-        <div class="blocktwo-item">
+        <div class="blocktwo-item" id="blocktwoid">
             <img src="img/pic1.jpg" alt="" width="70%">
             <img src="img/pic2.jpg" alt="" width="70%">
         </div>
@@ -180,7 +180,7 @@
     </div>
   <div class="blockfive" >
     <div class="blockfive-item">
-        <h4 id="five-descp">V naśem bazaru naleznete spoustu motorek, z kterých si můžete vybrat.<br>Neváhejte nás <a href="kontakt.html" id="bazar-contact">oslovit</a> a určitě spolu vybereme tu pravou pro Vás.</h4>
+        <h4 id="five-descp">V našem bazaru naleznete spoustu motorek, z kterých si můžete vybrat.<br>Neváhejte nás <a href="kontakt.html" id="bazar-contact">oslovit</a> a určitě spolu vybereme tu pravou pro Vás.</h4>
     </div>
 
     <div class="blockfive-item">
