--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive-home.css">
+    <link rel="stylesheet" href="css/responsive-home.css">
 </head>
 
 
