--- a/novinky.html
+++ b/novinky.html
@@ -16,8 +16,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">    
 <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-three.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="css/style-three.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
 </head>
 
