--- a/sluzby.html
+++ b/sluzby.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="blockthree">
-        <div class="blockthree-item">
+        <div class="blockthree-item" id="pics">
             <img src="img/pic4.jpg" alt="" width="50%">
             <img src="img/pic7.jpg" alt="" width="50%">
             <img src="img/pic8.jpg" alt="" width="50%">
