sluzby responsive done

--- a/sluzby.html
+++ b/sluzby.html
@@ -117,13 +117,15 @@
     </div>
 
     <div class="blockthree">
-        <div class="blockthree-item" id="pics">
-            <img src="img/pic4.jpg" alt="" width="50%">
-            <img src="img/pic7.jpg" alt="" width="50%">
-            <img src="img/pic8.jpg" alt="" width="50%">
-            <img src="img/pic9.jpg" alt="" width="50%">
-            <img src="img/pic5.jpg" alt="" width="50%">
-            <img src="img/pic6.jpg" alt="" width="50%">
+        <div class="blockthree-item">
+            <div class="pics">
+                <img src="img/pic4.jpg" alt="" width="50%">
+                <img src="img/pic7.jpg" alt="" width="50%">
+                <img src="img/pic8.jpg" alt="" width="50%">
+                <img src="img/pic9.jpg" alt="" width="50%">
+                <img src="img/pic5.jpg" alt="" width="50%">
+                <img src="img/pic6.jpg" alt="" width="50%">
+            </div>
         </div>
 
         <div class="blockthree-item">
